--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-screens": "~2.15.2",
     "react-native-segmented-control-tab": "^3.4.1",
     "react-native-swipe-list-view": "^3.2.6",
+    "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.0"
   },
