--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
-    "expo": "~40.0.0",
+    "expo": "^40.0.1",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
@@ -31,10 +31,27 @@
     "react-native-swipe-list-view": "^3.2.6",
     "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "^0.15.0"
+    "react-native-web": "^0.15.0",
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "^1.0.0",
+    "classnames": "^2.2.5",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "recompose": "^0.27.1",
+    "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "@storybook/addon-actions": "^3.4.5",
+    "@storybook/addon-knobs": "^3.4.5",
+    "@storybook/addon-links": "^3.4.5",
+    "@storybook/addon-notes": "^3.4.5",
+    "@storybook/addons": "^3.4.5",
+    "@storybook/react": "^3.4.5",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
+    "cypress": "^2.1.0",
+    "react-test-renderer": "^16.4.0"
   },
   "rnpm": {
     "assets": [
