added emergency dialog, installed react native dialog, installed blur, removed emergency info page

--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.1.0",
     "@expo-google-fonts/nunito-sans": "^0.1.0",
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "^1.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-segmented-control/segmented-control": "^2.3.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "classnames": "^2.2.5",
     "expo": "^40.0.1",
+    "expo-blur": "~8.2.2",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-dialog": "^6.2.0",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.7.2",
@@ -32,9 +37,6 @@
     "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.0",
-    "@material-ui/core": "^1.0.0",
-    "@material-ui/icons": "^1.0.0",
-    "classnames": "^2.2.5",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "recompose": "^0.27.1",
