--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/stack": "^5.14.3",
     "classnames": "^2.2.5",
     "expo": "^40.0.1",
-    "expo-blur": "~8.2.2",
+    "expo-blur": "^8.2.2",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "^16.4.0",
