emergency screen styling

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-calendar-strip": "^2.2.0",
     "react-native-dialog": "^6.2.0",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
@@ -32,6 +33,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-scroll-menu": "0.0.8",
+    "react-native-scrolling-menu": "^0.1.1",
     "react-native-segmented-control-tab": "^3.4.1",
     "react-native-swipe-list-view": "^3.2.6",
     "react-native-swipeout": "^2.3.6",
