--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-dialog": "^6.2.0",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-maps": "0.27.1",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
