corrected to route from current location to Stanford Hospital

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mapbox/polyline": "^1.1.1",
     "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-segmented-control/segmented-control": "^2.3.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
@@ -34,12 +35,14 @@
     "react-native-maps": "0.27.1",
     "react-native-maps-directions": "^1.8.0",
     "react-native-paper": "^4.7.2",
+    "react-native-permissions": "^3.0.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-scroll-menu": "0.0.8",
     "react-native-scrolling-menu": "^0.1.1",
     "react-native-segmented-control-tab": "^3.4.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-swipe-list-view": "^3.2.6",
     "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^8.1.0",
