--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-swipe-list-view": "^3.2.6",
     "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
     "react-native-web": "^0.15.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
