--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swipe-list-view": "^3.2.6",
     "react-native-swipeout": "^2.3.6",
+    "react-native-switch": "^2.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
     "react-native-web": "^0.15.0",
