--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
     "react-native-web": "^0.15.0",
+    "react-native-webview": "^11.2.3",
+    "react-native-youtube": "^2.0.1",
+    "react-native-youtube-iframe": "^1.4.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "recompose": "^0.27.1",
