--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mapbox/polyline": "^1.1.1",
     "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0",
+    "@react-native-community/datetimepicker": "^3.1.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-segmented-control/segmented-control": "^2.3.0",
@@ -28,6 +29,7 @@
     "react-dom": "^16.4.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-calendar-strip": "^2.2.0",
+    "react-native-date-picker": "^3.2.10",
     "react-native-dialog": "^6.2.0",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
