--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "recompose": "^0.27.1",
+    "toggle-switch-react-native": "^3.2.0",
     "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
