--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-google-maps-directions": "^2.1.1",
     "react-native-maps": "0.27.1",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.7.2",
     "react-native-permissions": "^3.0.1",
     "react-native-reanimated": "~1.13.0",
