--- a/app.json
+++ b/app.json
@@ -28,6 +28,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": "Pebble is the pregnancy app for partners."
+    "description": "Pebble — a pregnancy app for partners"
   }
 }
